# poly3lib

./: .gitignore  Cargo.toml
fast_ops/: Cargo.toml
fast_ops/src/: lib.rs
rom_data/: .gitignore  Cargo.toml
rom_data/src/: allocation.rs  data.rs  lib.rs  lz77.rs  pattern_search.rs  values.rs
rom_data/src/tests/: mod.rs  rom_values.rs  struct_read.rs  struct_size.rs  struct_write.rs
rom_data/src/types/: arrays.rs  bitfields.rs  mod.rs  pointers.rs  primitives.rs  text.rs  vectors.rs
rom_data/src/types/graphics/: colors.rs  graphic.rs  mod.rs  tilemap.rs  tiles.rs
rom_data/struct_macro/: Cargo.toml
rom_data/struct_macro/src/: lib.rs  parser.rs  parser_types.rs
rom_data/struct_macro/src/struct_code/: mod.rs  read.rs  sized.rs  write.rs
rom_data/value_derive/: Cargo.toml
rom_data/value_derive/src/: impls.rs  lib.rs  parser.rs
src/: graphics.rs  lib.rs  lz77.rs  main.rs  refs.rs  rom.rs  text.rs  values.rs
src/maps/: connection.rs  events.rs  header.rs  layout.rs  mapgrid.rs  mapsec.rs  mod.rs  render.rs  scripts.rs  tileset.rs  tileset_anims.rs  wilds.rs
src/maps/layout/: mapgrid.rs  methods.rs  mod.rs
src/maps/map/: data.rs  event.rs  events.rs  header.rs  loader.rs  mod.rs  scripts.rs
src/maps/scripts/: graph.rs  mod.rs  resources.rs  table.rs  tree.rs
src/maps/sections/: mod.rs
src/maps/tileset/: anim.rs  data.rs  mod.rs  pair.rs  types.rs
src/object_events/: anims.rs  graphics.rs  mod.rs  render.rs  subsprites.rs
src/scripts/: clear.rs  consts.rs  mod.rs  print.rs  scripts.rs  tree.rs  visit.rs
src/tables/: maps.rs
src/types/: colors.rs  integers.rs  mod.rs  tiles.rs
tests/: test_rom.rs
thumb/: .gitignore  Cargo.toml
thumb/bin16_macro/: Cargo.toml
thumb/bin16_macro/src/: lib.rs
thumb/src/: alu.rs  instructions.rs  lib.rs  main.rs  memory.rs  processor.rs  utils.rs
thumb/src/asm/: data.rs  disassembly.rs  mod.rs
types/: Cargo.toml
types/gba_macro/: Cargo.toml
types/gba_macro/src/: lib.rs
types/src/: arrays.rs  colors.rs  integers.rs  lib.rs  lz77.rs  pointers.rs  tiles.rs  vectors.rs
types/tests/: test_structs.rs  test_vectors.rs
