[package]
name = "poly3lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gba_types = { path = "types" }
gba_macro = { path = "types/gba_macro" }
colored = "2.0.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
image = "0.24.6"
base64 = "0.21.2"
