[package]
name = "poly3lib"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rom_data = { path = "rom_data" }
thumb = { path = "thumb" }

colored = "2.0.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
image = { version = "0.24.7", features = ["png"], default-features = false }
thiserror = "1.0.47"
base64 = "0.21.3"

[features]
debug_scripts_clear = []

[profile.dev.package.rom_data]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
overflow-checks = false
