[package]
name = "rom_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
struct_macro = { path = "struct_macro" }
value_derive = { path = "value_derive" }

colored = "2.0.4"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
