[package]
name = "gba_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gba_macro = { path = "gba_macro" }
fast_ops = { path = "../fast_ops" }
colored = "2.0.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
