[package]
name = "gba_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4.0"
proc-macro-error = { version = "1", default-features = false }
proc-macro2 = "1.0.59"
quote = "1.0.28"
